# Hi-C

./: .gitignore  .gitmodules  LICENSE  README.md  cournot.py  cournot_plot.py  plot.py  pyproject.toml  requirements.txt  run.py  scatterplot.py  singularity_build.sh  singularity_recipe.def  slurm_run.py  slurm_setup.py  slurm_test.sh  spsa_test.py  train.py  train_slurm.py  tune.py
experiments/: naive_sweep.yaml
experiments/matching_penies/: hi_c_naive_imp.yaml  hi_c_naive_l2_imp.yaml  lola_lola_imp.yaml  lola_lola_l2_imp.yaml  lola_naive_imp.yaml  lola_naive_l2_imp.yaml  naive_naive_imp.yaml  naive_naive_l2_imp.yaml
experiments/optimization/: hi_c_gaussian.yaml  hi_c_quadratic.yaml  naive_quadratic.yaml  naive_quadratic_tune.yaml
experiments/potential/: hi_c_naive_potential.yaml  naive_naive_potential.yaml
experiments/prisoners_dilemma/: hi_c_naive_ipd.yaml  hi_c_naive_ipd_tune.yaml  hierarchical_naive_ipd.yaml  lola_ipd.yaml  lola_lola_ipd.yaml  lola_lola_ipd_tune.yaml  lola_naive_ipd.yaml  lola_naive_ipd_tune.yaml  naive_ipd.yaml  naive_ipd_tune.yaml  naive_naive_ipd.yaml  naive_naive_ipd_tune.yaml
experiments/quadratic/: hi_c_quadratic.yaml  hi_c_quadratic_tune.yaml  naive_quadratic.yaml
hi_c/: __init__.py  core.py  experiment.py  grid_search.py  plotting.py  trainers.py  util.py
hi_c/games/: __init__.py  cournot.py  matrix.py  optimization.py  polynomial.py
hi_c/learners/: __init__.py  gradient.py  hi_c.py  hierarchical.py  lola.py  schedule.py
src/hi_c/: __init__.py  core.py  grid_search.py  trainers.py  util.py
src/hi_c/games/: __init__.py  (+3 more)
(+266 files in other folders)
